[gd_scene load_steps=3 format=3 uid="uid://dhg3uq88qs711"]

[ext_resource type="Script" uid="uid://4wa5ru5j3ve5" path="res://GUI/UseMenu.gd" id="1_jxs7q"]
[ext_resource type="Texture2D" uid="uid://dc3abl7gyrlwq" path="res://Assets/UI/fantasy-ui-borders.svg" id="2_6nltq"]

[node name="UseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 203.5
offset_top = 71.0
offset_right = 269.5
offset_bottom = 168.0
focus_mode = 2
script = ExtResource("1_jxs7q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0151515
anchor_right = 1.01515
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6nltq")
region_rect = Rect2(550, 164, 48, 48)
patch_margin_left = 13
patch_margin_top = 11
patch_margin_right = 13
patch_margin_bottom = 11
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
metadata/_edit_use_anchors_ = true

[node name="CharacterList" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="CharacterSlot1" type="VBoxContainer" parent="NinePatchRect/MarginContainer/CharacterList"]
layout_mode = 2

[node name="CharacterName" type="Button" parent="NinePatchRect/MarginContainer/CharacterList/CharacterSlot1"]
layout_mode = 2
text = "Clav"
alignment = 0

[node name="HP" type="Label" parent="NinePatchRect/MarginContainer/CharacterList/CharacterSlot1"]
layout_mode = 2
text = "9999/9999"
horizontal_alignment = 2
